# revoice-plus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  linux-i686.cmake
.github/workflows/: cmake.yml
dep/metamod/: sdk_util.h
dep/opus/: CMakeLists.txt
dep/rehlsdk/dlls/: extdll.h
dep/rehlsdk/engine/: rehlds_interfaces.h  struct.h
dep/silk/: CMakeLists.txt  SKP_Silk_main_FLP.h
dep/speex/: CMakeLists.txt
revoice/public/: IVoiceCodec.h  appversion.h  revoice_api.h
revoice/src/: SteamP2PCodec.cpp  SteamP2PCodec.h  VoiceEncoder_Opus.cpp  VoiceEncoder_Opus.h  VoiceEncoder_Silk.cpp  VoiceEncoder_Silk.h  VoiceEncoder_Speex.cpp  VoiceEncoder_Speex.h  api.h  dllapi.cpp  engine_api.cpp  h_export.cpp  iframeencoder.h  meta_api.cpp  osconf.h  precompiled.h  revoice_api.cpp  revoice_cfg.cpp  revoice_cfg.h  revoice_main.cpp  revoice_main.h  revoice_player.cpp  revoice_player.h  revoice_rehlds_api.cpp  revoice_rehlds_api.h  revoice_shared.h  revoice_utils.cpp  sdk_util.cpp  voice_codec_frame.cpp  voice_codec_frame.h
